# ToyZk80

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README,md  README.md  main.c
assembler/: CMakeLists.txt  assembler.c  assembler.h  assembly.c  disassembler.c  instructions.c  instructions.h  instructions.txt  main.c  text_util.c
assembler/instruction/: CMakeLists.txt  assembly.c  instructions.h
doc/: assembler.md
emulator/: CMakeLists.txt  core.c  display.c  emulator.h  instruction.c  main.c  memory.c
emulator/instruction/: call_instruction.c  call_instruction.h  condition_instruction.c  condition_instruction.h  instruction_test_util.h  jump_instruction.c  jump_instruction.h  ld_instruction.c  ld_instruction.h  logic_instruction.c  logic_instruction.h  math_instruction.c  math_instruction.h  stack_instruction.c  stack_instruction.h  unimplement_instruction.c  unimplement_instruction.h
util/: CMakeLists.txt  text_util.c  util.h
